tests/NormalTests/paczka1/small_fuzzy/20628207.err
Error in line 2: A793 S24 83,1
Error in line 4: A793 A393 44,9
Error in line 6: A793 S24 1,2
Error in line 10: A793 A793 5,8
Error in line 1: RmrlJZR4 S756 41,5
